# computer-games-with-rust

./: .gitignore  README.md
backend/: Cargo.toml  README.md  Rocket.toml  backend_notes.txt  tests.txt
backend/src/: main.rs
backend/src/database/: mod.rs
backend/src/model/: mod.rs
front_end/: Cargo.toml  index.html
front_end/src/: connect4.rs  lib.rs  main.rs
front_end/src/pages/: c4computer.rs  c4human.rs  howc4.rs  howtoot.rs  mod.rs  score.rs  scoreboard.rs  toot.rs  tootcomputer.rs  tootcomputer3.rs  toothuman.rs  welcome.rs
frontend_to_rest_api/: Cargo.toml
frontend_to_rest_api/src/: main.rs
games/: detected_bug.txt  notes.txt  test_cases.txt
games/src/: connect4.rs  lib.rs  main.rs  toot.rs
requests/: Cargo.toml
requests/src/: main.rs  request.rs
