[package]
name = "my-2nd-yew-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
stdweb = "0.4.7"
rand = "0.7.0-pre.1"
wbg-rand = "0.4.1"
wasm-logger = "0.2.0"
log = "0.4.6"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"]  }
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.79"
reqwest = { version = "0.11", features = ["blocking","json"] }
requests = { path = "../requests" }
wasm-bindgen-futures = "0.4.30"
futures = "0.3.21"
reqwasm = "0.5.0"
js-sys = "0.3.57"

[patch.crates-io]
stdweb = { git = 'https://github.com/arturoc/stdweb.git' }

[dependencies.web-sys]
version = "0.3.56"
#version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'DomRect',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Location',
  'HtmlSelectElement',
]
